<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dip"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dialogLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DE5347"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="vertical"
                    android:layout_margin="10dip"
                    >
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question"
                        android:background="#D2D2D2"
                        android:padding="10dip"
                        android:textSize="18sp"
                        />

                    <EditText
                        android:id="@+id/et_dialogQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer"
                        android:background="#D2D2D2"
                        android:padding="10dip"
                        android:textSize="18sp"
                        />

                    <EditText
                        android:id="@+id/et_dialogAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        />


                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:id="@+id/actionLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#17A05D"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="vertical"
                    android:layout_margin="10dip"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/basic_action_spinner_title"
                        android:background="#D2D2D2"
                        android:padding="10dip"
                        android:textSize="18sp"
                        android:textColor="#E51505"
                        />

                    <Spinner
                        android:id="@+id/actionSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip">

                    </Spinner>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/basic_action_spinner_time_title"
                        android:background="#D2D2D2"
                        android:padding="10dip"
                        android:textSize="18sp"
                        />

                    <Spinner
                        android:id="@+id/actionTimeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip">

                    </Spinner>

                    <Button
                        android:id="@+id/btn_addAction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="@string/addActon"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#C5EAC9"
                        >

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/showActionRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dip"
                            >

                        </android.support.v7.widget.RecyclerView>


                    </RelativeLayout>



                </LinearLayout>



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="#6C6D6B"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/expressionLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FDC540"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:orientation="vertical"
                    android:layout_margin="10dip"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expression_spinner_title"
                        android:background="#D2D2D2"
                        android:padding="10dip"
                        android:textSize="18sp"
                        android:textColor="#E51505"
                        />

                    <Spinner
                        android:id="@+id/expressionSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </Spinner>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expression_spinner_time_title"
                        android:background="#D2D2D2"
                        android:padding="10dip"
                        android:textSize="18sp"
                        />

                    <Spinner
                        android:id="@+id/expressionTimeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dip"
                        >

                    </Spinner>

                    <Button
                        android:id="@+id/btn_addExpression"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addExpression"
                        android:padding="10dip"
                        />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#C5EAC9"
                        >
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/showExpressionRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dip"
                            >

                        </android.support.v7.widget.RecyclerView>


                    </RelativeLayout>


                </LinearLayout>




            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>